fix search input padding in Go to File/Function dialog (#17256)
The dialog-wide input styling rule (.gwt-DialogBox input[type=text])
added padding that leaked into the SearchWidget's input, pushing
text out of bounds. Reset padding in both the dialog .search override
and the .searchBox base rule.

--- a/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
+++ b/src/gwt/src/org/rstudio/core/client/theme/res/themeStyles.css
@@ -323,6 +323,7 @@ button, input[type="reset"], input[type="button"], input[type="submit"] {
 .gwt-DialogBox .search input[type=text] {
    border: none;
    height: 100%;
+   padding: 0;
 }
 
 iframe {
@@ -1835,6 +1836,7 @@ body.windows table.webGlobalToolbar {
    height: 100%;
    border: 0;
    margin: 0;
+   padding: 0;
    outline: none;
    font-size: 10px;
    background-color: transparent;
